--- a/image Maven Webapp/pom.xml
+++ b/image Maven Webapp/pom.xml
@@ -99,7 +99,18 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+		<!-- postgresql驱动 -->
+		<dependency>
+			<groupId>postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>9.3-1102.jdbc4</version>
+		</dependency>
+		<!-- jxl -->
+		<dependency>
+			<groupId>jxl</groupId>
+			<artifactId>jxl</artifactId>
+			<version>1.0.0</version>
+		</dependency>
 	</dependencies>
 
 	<build>
